make sure plans cards line up when text wraps to new line

--- a/trymito.io/styles/Plans.module.css
+++ b/trymito.io/styles/Plans.module.css
@@ -39,17 +39,23 @@
         flex: 1;
     }
 
+    .plan_card {
+        max-width: 25rem;
+    }
+
     .plan_card + .plan_card {
         margin-top: 0;
         margin-left: 1rem;
     }
 
-    .plan_card {
-        max-width: 25rem;
+    .plan_card_header {
+        height: 6rem;
+        font-size: 2.5rem;
     }
-
+    
     .price_text {
         font-size: 2rem;
+        margin-top: 1rem;
     }
 
     .plan_description, 
@@ -57,11 +63,12 @@
         height: 3rem;
         font-size: 1rem;
     }
-    
-    .plan_cards h1 {
-        font-size: 2.5rem;
-    }
 
+    .plan_bullets_container {
+        height: 12rem;
+        margin-top: 1rem;
+    }
+    
     .plan_feature_grid_container {
         max-width: 90rem;
     }
